Fix some spacing and colouring issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,14 +73,15 @@ h3 { color: #353535; word-spacing: 1px; line-height: 1.2em;}
 h4 { color: #5c6368; word-spacing: 1px; line-height: 25px;}
 p { color: #8c9398; word-spacing: 1px; line-height: 25px;}
 a { color: #353535; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
-a:hover, a:focus { color: #3dc9b3; text-decoration: none; }
+a:hover { color: #1b86c7; text-decoration: none;}
+a:focus { color: #ffffff; text-decoration: none; }
 .inner { padding-top: 100px; }
 .section-padding { padding: 50px 0 50px }
 .nopadding { padding: 0; }
 .wrapper { height: 500px; }
 .dark-bg { background: #f3f5f8; }
 .light-box { background-color: #fff; -webkit-box-shadow: 0px 3px 0px 0px #f0f2f4; -moz-box-shadow: 0px 3px 0px 0px #f0f2f4; box-shadow: 0px 3px 0px 0px #f0f2f4; padding: 20px 0; }
-.light-box:hover, .light-box:focus { -webkit-box-shadow: 0px 3px 0px 0px #3dc9b3; -moz-box-shadow: 0px 3px 0px 0px #3dc9b3; box-shadow: 0px 3px 0px 0px #3dc9b3; }
+.light-box:hover, .light-box:focus { -webkit-box-shadow: 0px 3px 0px 0px #1b86c7; -moz-box-shadow: 0px 3px 0px 0px #1b86c7; box-shadow: 0px 3px 0px 0px #1b86c7; }
 .box-hover { transition: all 500ms ease-in-out; -webkit-transition: all 500ms ease-in-out; -moz-transition: all 500ms ease-in-out; -o-transition: all 500ms ease-in-out; }
 .box-hover:hover, .box-hover:focus { transform: translate(0, -15px); -webkit-transform: translate(0, -15px); -ms-transform: translate(0, -15px); }
 
@@ -221,13 +222,21 @@ Quote Section
 }
 
 .quote h2 {
+    /*margin: 2em 0*/
+    line-height: 1.7em;
+    font-family: futura-book;
     color: #fff;
-    font-size: 40px;
+    font-size: 27px;
     letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
 .quote h2 em {
+    font-size: 30px;
+    font-style: normal;
     font-family: lemon-tuesday;
+    text-transform: lowercase;
+
 }
 .down-arrow-btn {
     width: 40px;
@@ -236,7 +245,8 @@ Quote Section
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     -o-border-radius: 50%;
-    background: rgba(61, 201, 179, 0.8);
+    background: rgba(32, 39, 58, 0.6);
+    /*background: rgba(61, 201, 179, 0.8);*/
     display: inline-block;
     margin: 10px auto 20px;
     color: #fff;
@@ -246,7 +256,8 @@ Quote Section
 }
 .down-arrow-btn:hover, .down-arrow-btn:focus {
     color: #fff;
-    background: rgba(61, 201, 179, 1);
+    background: rgba(32, 39, 58, 1);
+    /*background: rgb(255, 255, 255);*/
 }
 
 /* ==========================================================================
@@ -274,6 +285,10 @@ a.expand { font-family: futura-light; display: block; position: absolute; z-inde
 /* ==========================================================================
 Venue Section
 ========================================================================== */
+.venue h2 {
+    margin-top: 5px;
+    margin-bottom: 1px;
+}
 
 #map {
     width: 650px;
@@ -305,14 +320,14 @@ ul.social-buttons { list-style: none; margin: 0; padding: 0; }
 ul.social-buttons li { display: inline-block; margin-right: 10px; }
 ul.social-buttons li:last-child { margin-right: 0; }
 .social-btn { width: 40px; height: 40px; border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; background: #242830; display: inline-block; color: #fff; font-size: 17px; line-height: 40px; text-align: center; }
-.social-btn:hover, .social-btn:focus { background: #3dc9b3; color: #fff; }
+.social-btn:hover, .social-btn:focus { background: #ffffff; color: #fff; }
 .social { margin-top: 25px }
 
 /* ==========================================================================
 Summarise section
 ========================================================================== */
 .summarise {
-    background: url('../img/quote-bg.jpg') no-repeat center center;
+    background: url('../img/summarise-bg.jpg') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -330,10 +345,10 @@ Summarise section
 Footer
 ========================================================================== */
 .footer-wrap { position: relative; }
-.up-btn { width: 50px; height: 50px; border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; background: rgba(61, 201, 179, 0.5); display: block; margin: 0 auto; color: #fff; font-size: 18px; line-height: 46px; text-align: center; position: absolute; top: -26px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
-.up-btn:hover, up-btn:focus { color: #fff; background: rgba(61, 201, 179, 1); }
+.up-btn { width: 50px; height: 50px; border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; background: rgba(32, 39, 58, 0.6); display: block; margin: 0 auto; color: #fff; font-size: 18px; line-height: 46px; text-align: center; position: absolute; top: -26px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
+.up-btn:hover, up-btn:focus { color: #fff; background: rgba(32, 39, 58, 1); }
 footer a { color: #a1a9b0; }
-footer { background-color: #5c6368; padding: 40px 0 30px; }
+footer { background-color: #373737; padding: 40px 0 30px; }
 footer p {
     color: #fff;
     margin-bottom: 0;
